Fixed formatting on Mobile card

--- a/themes/docroot/css/common-override.css
+++ b/themes/docroot/css/common-override.css
@@ -14,6 +14,7 @@
 #dnsServer,#ipv4_dns_sec,#dns_v6_pri,#dns_v6_sec{width:190px;}
 #helper>tbody>tr>td{text-transform:uppercase;}
 #hide-unhide-non-connected-device{display:none;}
+#mobiletab .content .card-label{font-size:14px;}
 #proctable>tbody>tr>td:nth-child(1),#proctable>tbody>tr>td:nth-child(2),#proctable>tbody>tr>td:nth-child(5),#proctable>tbody>tr>td:nth-child(6),#proctable>tbody>tr>td:nth-child(7){text-align:right;}
 #proctable>tbody>tr>td:nth-child(6):after,#proctable>tbody>tr>td:nth-child(7):after{content:"%";}
 #proctable>thead>tr>th{white-space:nowrap;}
